--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "realtime markdown previewer",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "mocha",
+    "browserify": "browserify client.js -o public/bundle.js"
   },
   "bin": {
     "markon": "./bin/markon"
@@ -12,16 +13,14 @@
   "author": "Ryo Murayama <utatanenohibi@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "3.28.2"
-  },
-  "devDependencies": {
-    "mocha": "~1.17.1"
+    "mocha": "*",
+    "browserify": "~3.28.2"
   },
   "dependencies": {
     "markdown-stream": "git://github.com/hitsujiwool/markdown-stream.git#0.0.1",
     "through": "~2.3.4",
     "highlight": "~0.2.3",
-    "shoe": "0.0.15",
+    "shoe": "~0.0.15",
     "ecstatic": "~0.4.13",
     "commander": "~1.3.0",
     "chokidar": "~0.8.1"
